Include script.js in index.html
Added script tag for external JavaScript file.
hm

--- a/index.html
+++ b/index.html
@@ -164,5 +164,10 @@
       © 2026 CBSE Class 10 Board Prep • Built for maximum board marks
     </footer>
   </main>
+
+</main>
+
+<script src="script.js"></script>
 </body>
 </html>
+  
