AdAdded answer output container below search formd answer box to search form in index.html
Added a div for displaying answers in the search form.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
       <input class="search-input" type="search" placeholder="Ask any NCERT Class 10 CBSE question... e.g. 'Photosynthesis diagram explanation'" aria-label="Search questions">
       <button class="search-button" type="submit">Search</button>
     </form>
-
+<div class="answer-box" id="answerBox">
+  Answer will appear here
+</div>
     <div class="tabs" role="region" aria-label="Answer views">
       <div class="tab-list" role="tablist" aria-label="Answer tabs">
 
